cambiso clase 01 feb

--- a/Modulo3/01Feb(estructuras)/index.html
+++ b/Modulo3/01Feb(estructuras)/index.html
@@ -8,7 +8,9 @@
 <body>
 
 <!-- Agrega referencias a tus archivos JavaScript -->
-<script src="ejercicio_estructura.js"></script>
+<script src="ejercicio_LIFO.js"></script>
+<script src="ejercicio_FIFO.js"></script>
+
 
 </body>
 </html>
